--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "mysql2": "^3.3.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "employee-tracker",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
